# rspc

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
httpz/: Cargo.toml  README.md
httpz/src/: error.rs  generic_endpoint.rs  lib.rs  request.rs  response.rs  server.rs
httpz/src/servers/: axum.rs  mod.rs
httpz/src/ws/: message.rs  mod.rs  tokio_ws.rs
src/: error.rs  lib.rs  router.rs  router_builder.rs  selection.rs
src/alpha/: layer.rs  mod.rs  procedure.rs  router.rs  rspc.rs
src/alpha/middleware/: mw_ctx.rs  mw_result.rs
src/alpha/unstable/: mw_arg_mapper.rs
src/alpha_stable/: mod.rs  resolver_function.rs  resolver_result.rs
src/integrations/: httpz.rs  httpz_extractors.rs  mod.rs  tauri.rs
src/internal/: async_map.rs  jsonrpc_exec.rs  mod.rs  procedure_store.rs
