[package]
name    = "httpz"
version = "0.0.6"

authors     = ["Oscar Beaumont <oscar@otbeaumont.me>"]
description = "Code once, support every Rust webserver!"
edition     = "2021"
license     = "MIT"

readme     = "README.md"
repository = "https://github.com/spacedriveapp/rspc/tree/main/httpz"

categories = [
	"asynchronous",
	"development-tools",
	"network-programming",
	"web-programming",
	"web-programming::http-server"
]
keywords = ["async", "http", "httpz", "web", "websockets"]

[dependencies]
async-tungstenite = { version = "0.28.0", features = ["tokio-native-tls"] }
axum              = { version = "0.7.7", features = ["macros"] }
base64            = { version = "0.22.1" }
form_urlencoded   = "1.2"
futures           = "0.3.31"
http              = { version = "1.1", features = [] }
hyper             = "1.4"
hyper-util        = { version = "0.1.9", features = ["tokio"] }
percent-encoding  = { version = "2.3", features = [] }
sha1              = { version = "0.10.5" }
thiserror         = "1.0"
tokio             = { version = "1.40", features = [], default-features = false }
tracing           = { version = "0.1.40" }

[dev-dependencies]
axum  = { version = "0.7.7", features = [] }
tokio = { version = "1.40", features = ["fs", "macros", "rt-multi-thread"] }
